# QtFlex5

./: CMakeLists.txt
examples/QtGuider/: CMakeLists.txt  QtGuider.cpp  QtGuider.ui  main.cpp
include/: QtFlexHelper.h
src/: CMakeLists.txt  FlexButton.cpp  FlexButton.h  FlexButtons.h  FlexExtents.h  QtFlexHelper.cpp
src/private/: FlexHelperImpl.hpp  FlexHelperImplOSX.hpp  FlexHelperImplWayland.hpp  FlexHelperImplWin.hpp  FlexHelperImplXCB.hpp
