CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11 FATAL_ERROR)
PROJECT(QtFlex)

include(CheckCXXCompilerFlag)
include(CheckLibraryExists)

CHECK_CXX_COMPILER_FLAG(-fvisibility-inlines-hidden COMPILER_HAS_VISIBILITY_INLINE_HIDDEN)
CHECK_CXX_COMPILER_FLAG(-fvisibility=hidden COMPILER_HAS_VISIBILITY_HIDDEN)
CHECK_CXX_COMPILER_FLAG(-std=c++11 LIBCXX_HAS_STDCXX11_FLAG)
CHECK_CXX_COMPILER_FLAG(-s LIBCXX_HAS_STRIP_FLAG)

if (LIBCXX_HAS_STRIP_FLAG)
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
endif()

if (${COMPILER_HAS_VISIBILITY_INLINE_HIDDEN})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility-inlines-hidden")
endif()

if (${COMPILER_HAS_VISIBILITY_HIDDEN})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
endif()

if (NOT ANDROID AND NOT MSVC)
	if(LIBCXX_HAS_STDCXX11_FLAG)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	else()
		CHECK_CXX_COMPILER_FLAG(-std=c++0x LIBCXX_HAS_STDCXX0X_FLAG)
		if(LIBCXX_HAS_STDCXX0X_FLAG)
			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
		else()
			if(NOT CMAKE_CXX_COMPILER MATCHES "icc")
				message(FATAL "need at least gcc 4.4.7 or clang 3.2")
			endif(NOT CMAKE_CXX_COMPILER MATCHES "icc")
		endif()
	endif(LIBCXX_HAS_STDCXX11_FLAG)
	# endif() # if(NOT CMAKE_CXX_COMPILER MATCHES "icc")
endif(NOT ANDROID AND NOT MSVC)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples/QtGuider)
